@@ -165,12 +165,12 @@
                     <StackPanel>
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                             <StackPanel Orientation="Horizontal">
-                                <TextBlock Text="Lat: " Foreground="{StaticResource PulseFontHighlightColor}" Margin="5,0,5,0" VerticalAlignment="Bottom" />
-                                <TextBlock Text="{Binding Path=Lat}" Foreground="{StaticResource PulseFontBrightColor}" Margin="5,0,5,0" FontWeight="Bold" FontSize="20" VerticalAlignment="Bottom" />
+                                <TextBlock Text="Lat: " Foreground="{StaticResource PulseFontHighlightColor}" Margin="5,0,5,0" VerticalAlignment="Bottom"/>
+                                <TextBlock Text="{Binding Path=Lat}" Foreground="{StaticResource PulseFontBrightColor}" Margin="5,0,5,0" FontWeight="Bold" FontSize="20" VerticalAlignment="Bottom" Width="160"  />
                             </StackPanel>
                             <StackPanel Orientation="Horizontal">
                                 <TextBlock Text="Lon: " Foreground="{StaticResource PulseFontHighlightColor}" Margin="5,0,5,0" VerticalAlignment="Bottom" />
-                                <TextBlock Text="{Binding Path=Lon}" Foreground="{StaticResource PulseFontBrightColor}" Margin="5,0,5,0" FontWeight="Bold" FontSize="20" VerticalAlignment="Bottom" />
+                                <TextBlock Text="{Binding Path=Lon}" Foreground="{StaticResource PulseFontBrightColor}" Margin="5,0,5,0" FontWeight="Bold" FontSize="20" VerticalAlignment="Bottom" Width="180" />
                             </StackPanel>
                         </StackPanel>
                         <StackPanel Orientation="Horizontal">
