@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 	<head>
-		<title>Version 4.12.3 ChangeLog</title>
+		<title>Version 4.12.5 ChangeLog</title>
 		<style type="text/css">
             .auto-style1 {
 	            text-decoration: underline;
@@ -10,7 +10,14 @@
 	</head>
 	<body>
         <p>
-            <br /><span class="auto-style1">Pulse-4.12.3</span>
+            <br /><span class="auto-style1">Pulse-4.12.5</span>
+            <br />  Pulse-4.12.5
+            <br />  - Added Lithium option for the prediction models.
+            <br />
+            <br />  Pulse-4.12.4
+            <br />  * In CompassCalViewModel, wait for a reply when getting pre and post points.
+            <br />  * In NmeaDataSet, fix how i check for a NaN value for the GPS speed.
+            <br />
             <br />  Pulse-4.12.3
             <br />  * In ViewDataDvlViewModel, fixed bug in Handle when checking for NULL.
             <br />  - Cleaned up the DVL View.
